update api docs

--- a/files/roles_roles.js.html
+++ b/files/roles_roles.js.html
@@ -91,7 +91,7 @@
 ;(function () {
 
 &#x2F;**
- * Provides functions related to user authorization.
+ * Provides functions related to user authorization. Compatible with built-in Meteor accounts packages.
  *
  * @module Roles
  *&#x2F;
@@ -104,7 +104,10 @@ Meteor.roles = new Meteor.Collection(&quot;roles&quot;)
 
 
 &#x2F;**
- * Role-based authorization.  Uses &#x27;roles&#x27; collection to store existing roles.  Adds a &#x27;roles&#x27; field to user objects when they are added to a given role.
+ * &lt;p&gt;Role-based authorization compatible with built-in Meteor accounts package.&lt;&#x2F;p&gt;
+ * &lt;br &#x2F;&gt;
+ * &lt;p&gt;Uses &#x27;roles&#x27; collection to store existing roles.&lt;&#x2F;p&gt;
+ * &lt;p&gt;Adds a &#x27;roles&#x27; field to user objects in &#x27;users&#x27; collection when they are added to a given role.&lt;&#x2F;p&gt;
  *
  * @class Roles
  * @constructor
