--- a/modules/Roles.html
+++ b/modules/Roles.html
@@ -102,7 +102,7 @@
 
 
 <div class="box intro">
-    <p>Provides functions related to user authorization.</p>
+    <p>Provides functions related to user authorization. Compatible with built-in Meteor accounts packages.</p>
 </div>
 
 
