--- a/modules/Roles.html
+++ b/modules/Roles.html
@@ -92,7 +92,7 @@
 
     
         <div class="foundat">
-            Defined in: <a href="..&#x2F;files&#x2F;roles_roles.js.html#l16"><code>roles&#x2F;roles.js:16</code></a>
+            Defined in: <a href="..&#x2F;files&#x2F;roles_roles_server.js.html#l16"><code>roles&#x2F;roles_server.js:16</code></a>
         </div>
     
 
